# project-euler

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json
drizzle/: schema.ts
drizzle/migrations/: 0000_tiny_mockingbird.sql  0001_harsh_mother_askani.sql
drizzle/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
manager/: eulerApi.ts  main.ts
manager/templates/: clojure.ts  python.ts  typescript.ts
runner/: Dockerfile  package.json  server.ts
solutions/00001/: PROBLEM.md
solutions/00001/clojure/: README.md  main.clj
solutions/00001/python/: main.py  pyproject.toml
solutions/00001/typescript/: README.md  main.ts
solutions/00002/: PROBLEM.md
solutions/00002/python/: main.py  pyproject.toml
solutions/00003/: PROBLEM.md
solutions/00003/clojure/: main.clj
solutions/00003/python/: main.py  pyproject.toml
solutions/00004/: PROBLEM.md
solutions/00004/python/: main.py  pyproject.toml
solutions/00005/: PROBLEM.md
solutions/00005/python/: main.py  pyproject.toml
solutions/00006/: PROBLEM.md
solutions/00006/clojure/: main.clj
solutions/00006/python/: main.py  pyproject.toml
solutions/00007/: PROBLEM.md
solutions/00007/clojure/: main.clj
solutions/00007/python/: main.py  pyproject.toml
solutions/00008/: PROBLEM.md
solutions/00009/: PROBLEM.md
solutions/00010/: PROBLEM.md
solutions/00011/: PROBLEM.md
src/: app.css  app.d.ts  hooks.server.ts
src/lib/: constants.ts  types.ts
src/lib/server/: auth.ts  db.ts  (+2 more)
src/routes/: +layout.svelte  +page.server.ts
(+26 files in other folders)
